--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="hero">
         <h1> <img src="images/1701658587089.jpg" alt="profile-photo" class="profilePhoto" > Kinya Ruth</h1>
         
-        <p>Software Developer | System Administrator | Problem Solver</p>
+        <p>Software Developer | System Administrator </p>
         </div>
        
        <nav >
